@@ -19,9 +19,18 @@
 
 package springfox.documentation.spring.web.readers.operation;
 
-import com.fasterxml.classmate.ResolvedType;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
+import static springfox.documentation.schema.Collections.isContainerType;
+import static springfox.documentation.schema.Maps.isMapType;
+import static springfox.documentation.schema.Types.isBaseType;
+import static springfox.documentation.schema.Types.typeNameFor;
+
+import java.lang.annotation.Annotation;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
@@ -30,6 +39,9 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestPart;
+
+import com.fasterxml.classmate.ResolvedType;
+
 import springfox.documentation.builders.ParameterBuilder;
 import springfox.documentation.service.Parameter;
 import springfox.documentation.service.ResolvedMethodParameter;
@@ -41,16 +53,6 @@ import springfox.documentation.spi.service.contexts.ParameterContext;
 import springfox.documentation.spring.web.plugins.DocumentationPluginsManager;
 import springfox.documentation.spring.web.readers.parameter.ExpansionContext;
 import springfox.documentation.spring.web.readers.parameter.ModelAttributeParameterExpander;
-
-import java.lang.annotation.Annotation;
-import java.util.List;
-import java.util.Set;
-
-import static com.google.common.base.Predicates.*;
-import static com.google.common.collect.Lists.*;
-import static springfox.documentation.schema.Collections.*;
-import static springfox.documentation.schema.Maps.*;
-import static springfox.documentation.schema.Types.*;
 
 @Component
 @Order(Ordered.HIGHEST_PRECEDENCE)
@@ -83,7 +85,7 @@ public class OperationParameterReader implements OperationBuilderPlugin {
   private List<Parameter> readParameters(final OperationContext context) {
 
     List<ResolvedMethodParameter> methodParameters = context.getParameters();
-    List<Parameter> parameters = newArrayList();
+    List<Parameter> parameters = new ArrayList<>();
 
     for (ResolvedMethodParameter methodParameter : methodParameters) {
       ResolvedType alternate = context.alternateFor(methodParameter.getParameterType());
@@ -104,13 +106,13 @@ public class OperationParameterReader implements OperationBuilderPlugin {
         }
       }
     }
-    return FluentIterable.from(parameters).filter(not(hiddenParams())).toList();
+    return parameters.stream().filter(hiddenParams().negate()).collect(Collectors.toList());
   }
 
   private Predicate<Parameter> hiddenParams() {
     return new Predicate<Parameter>() {
       @Override
-      public boolean apply(Parameter input) {
+      public boolean test(Parameter input) {
         return input.isHidden();
       }
     };
@@ -124,16 +126,16 @@ public class OperationParameterReader implements OperationBuilderPlugin {
     if (ignorableParamTypes.contains(resolvedParameterType.getErasedType())) {
       return true;
     }
-    return FluentIterable.from(ignorableParamTypes)
+    return ignorableParamTypes.stream()
         .filter(isAnnotation())
-        .filter(parameterIsAnnotatedWithIt(parameter)).size() > 0;
+        .filter(parameterIsAnnotatedWithIt(parameter)).count() > 0;
 
   }
 
   private Predicate<Class> parameterIsAnnotatedWithIt(final ResolvedMethodParameter parameter) {
     return new Predicate<Class>() {
       @Override
-      public boolean apply(Class input) {
+      public boolean test(Class input) {
         return parameter.hasParameterAnnotation(input);
       }
     };
@@ -142,7 +144,7 @@ public class OperationParameterReader implements OperationBuilderPlugin {
   private Predicate<Class> isAnnotation() {
     return new Predicate<Class>() {
       @Override
-      public boolean apply(Class input) {
+      public boolean test(Class input) {
         return Annotation.class.isAssignableFrom(input);
       }
     };
